fix(new topic page): increase padding to close gap seen on iphone

--- a/static/css/s2.css
+++ b/static/css/s2.css
@@ -10748,7 +10748,7 @@ cursor: pointer;
 }
 
 .singlePanel .tab-view.largeTabs .tab-list .active .tab {
-  padding-bottom: 17px;
+  padding-bottom: 18px;
 }
 
 .langSelectPopover {
